--- a/docs/src/style.css
+++ b/docs/src/style.css
@@ -401,8 +401,16 @@ html .clear-completed:active {
 code {
     display: block;
     padding: 15px;
-}
 
+
+    /**
+     * https://css-tricks.com/better-line-breaks-for-long-urls/
+     */
+    overflow-wrap: break-word;
+    word-wrap: break-word;
+    word-break: break-word;
+    hyphens: auto;
+}
 
 a {
     color: #b83f45;
@@ -413,8 +421,6 @@ a {
 a:visited {
     color: #b83f45;
 }
-
-
 
 
 /**
